# opencl_raytracer

./: .gitignore  .travis.yml  CMakeLists.txt  FindEmbed.cmake  FindOpenCL.cmake  LICENSE  LICENSE.md  LICENSE.txt  README.md  README.txt  main.cc  opencl_host.h  ray.h  ray_tracer.h  triangle.cc
.travis/: build.sh
_README/: readme.html
_README/img/: .directory
doc/: doc.md  style.css
doc/html/: index.html
doc/slides/: group-2.odp
include/: aabb.h  args.h  bvh.h  color.h  compiler_options.h  info.h  mesh.h  opencl_host.h  ray_tracer.h  timer.h  triangle.h  vec3.h
opencl/: bvh.cc  bvh.h  color.h  compiler_options.h  intersect_kernel.cl  opencl_host.cc  opencl_host.h  ray_tracer.cc  rs
opencl/scene/: bunny.off
opencl/vectors/: main.cpp  program  ray.h  run  sampler.h  vector3.h
openmp/: Makefile  aabb.h  bvh.cc  color.cc  info.h  main.cc  mesh.h  ray_tracer.cc  ray_tracer.h  rb  render  vec3.h
slides/: group-2.odp  gruppe_2.odp
src/: aabb.cc  aabb.h  bvh.cc  bvh.h  color.cc  color.h  compiler_options.h  info.cc  info.h  intersect_kernel.cl  main.cc  mesh.cc  mesh.h  opencl_host.cc  opencl_host.h  ray.h  ray_tracer.cc  ray_tracer.h  render.cc  timer.cc  timer.h  triangle.cc  triangle.h  vec3.h
src/opencl/: Makefile  info.cc  mesh.cc  opencl_host.cc  timer.h  vec3.h
src/openmp/: aabb.cc  bvh.h  intersect_kernel.h  mesh.cc  openmp_host.cc  openmp_host.h  triangle.cc  triangle.h
